--- a/ghost/themes/coder/home.hbs
+++ b/ghost/themes/coder/home.hbs
@@ -31,9 +31,9 @@ screwing around is writing it down.
 The rest as they say, is <a href="https://docs.google.com/document/d/1M5_Sq7HvkcnSBsdEqrupPstObjimxhuQisBVJlLHkU0/edit#heading=h.rzuru8wouiyw">history</a>.
 
 If you can figure out an authors name, you can view all their posts on bamf.
-That's pretty much the only way to get anywhere. If you figure out a sql
-injection attack that dumps out a list of authors, respect their privacy and
-mail bamfadm@google.com.
+They can also choose to show you some posts under a given tag. Those are pretty
+much the only ways to get anywhere. If you figure out an injection attack that
+dumps out a list of authors, respect their privacy and mail bamfadm@google.com.
 
 May you live long enough to have your software explained to you.
 </pre>
