--- a/ghost/themes/coder/home.hbs
+++ b/ghost/themes/coder/home.hbs
@@ -20,24 +20,23 @@ young and ambitious we decide to run this backup server in France. How else
 would we get our chrome crashdumps if disaster struck North America?
 
 Sometime later, this backup server was called to action. Because of the nature
-of tasks is was asked to perform, and the decency with which it conducted
-itself in those trying times, we decided not to de-comission it.
+of the tasks is was asked to perform, and the decency with which it conducted
+itself, we decided not to de-comission it.
 
-We moved on with life.
+<strike>Countless</strike> 50 chromebooks launched.
 
 One day, a code yellow was declared. It felt like we were going to war. No-one
 understood the enemy, but it was decided. Come along or gtfo. So we went along,
-but documented everything in a replicated NFS volume through a markdown server
-running on the most reliable server around. Because the only difference between
-science and screwing around is writing it down.
+but documented everything in a replicated NFS volume. Because the only
+difference between science and screwing around is writing it down.
 
 The rest as they say, is <a href="https://docs.google.com/document/d/1M5_Sq7HvkcnSBsdEqrupPstObjimxhuQisBVJlLHkU0/edit#heading=h.rzuru8wouiyw">history</a>.
 
-Today bamf continues to host a markdown server in France. If you can figure out
-an authors name, you can view all their notes. They can also choose to show you
-some posts under a given tag. Those are pretty much the only way to get
-anywhere. If you figure out an injection attack that dumps out a list of
-authors, respect their privacy and mail bamfadm@google.com.
+Today bamf continues to host a markdown server fronting replicated storage,
+somewhere out of France. If you can figure out an authors name, you can view
+all their notes. They can also choose to show you posts under a given tag. Those
+are pretty much the only way to get anywhere. If you somehow coerce the database
+to dump a list of authors, respect their privacy and mail bamfadm@google.com.
 
 May you live long enough to have your software explained to you.
 </pre>
