Add tags to author page, fork off into author-loop

--- a/ghost/themes/coder/author.hbs
+++ b/ghost/themes/coder/author.hbs
@@ -23,6 +23,6 @@
 <main class="container-fluid" role="main">
 
     {{! The tag below includes the post loop - partials/loop.hbs }}
-    {{> "loop"}}
+    {{> "author-loop"}}
 
 </main>
