--- a/ghost/kubernetes/themes/coder/home.hbs
+++ b/ghost/kubernetes/themes/coder/home.hbs
@@ -12,32 +12,6 @@
 }
 </style>
 <pre class="center">
-Bamf doesn't stand for anything. Not Bamford Stevens reaction, not Bamfrônṭ,
-not even bamf. It's just a flippant word we came up with on a whim.
-
-Sometime later, we decided to use it as the hostname of a backup server. Being
-young and ambitious we decide to run this backup server in France. How else
-would we get our chrome crashdumps if disaster struck North America?
-
-Sometime later, this backup server was called to action. Because of the nature
-of the tasks is was asked to perform, and the decency with which it conducted
-itself, we decided not to de-comission it.
-
-<strike>Countless</strike> 50 chromebooks launched.
-
-One day, a code yellow was declared. It felt like we were going to war. No-one
-understood the enemy, but it was decided. Come along or gtfo. So we went along,
-but documented everything in a replicated NFS volume. Because the only
-difference between science and screwing around is writing it down.
-
-The rest as they say, is <a href="https://docs.google.com/document/d/1M5_Sq7HvkcnSBsdEqrupPstObjimxhuQisBVJlLHkU0/edit#heading=h.rzuru8wouiyw">history</a>.
-
-Today bamf continues to host a markdown server fronting replicated storage,
-somewhere out of France. If you can figure out an authors name, you can view
-all their notes. They can also choose to show you posts under a given tag. Those
-are pretty much the only way to get anywhere. If you somehow coerce the database
-to dump a list of authors, respect their privacy and mail bamfadm@google.com.
-
-May you live long enough to have your software explained to you.
+<img src="https://imgs.xkcd.com/comics/success.png" alt="The image is missing, this is what we want you to see instaed.">
 </pre>
 </html>
