--- a/ghost/kubernetes/themes/coder_dark/default.hbs
+++ b/ghost/kubernetes/themes/coder_dark/default.hbs
@@ -13,6 +13,7 @@
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <link rel="shortcut icon" href="{{asset "/img/favicon.png"}}">
     
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
